# ClickUpAgent

./: .gitignore  config.json.template  pyproject.toml
.claude/: CLAUDE.md
.claude/commands/: add_done.md  add_tag.md  add_task.md  attach.md  comment.md  digest.md  done.md  focus.md  help.md  init_oysterun.md  kanban.md  list_tasks.md  ls_tags.md  overdue.md  pending.md  rm_tag.md  set_pr.md  spaces.md  to_progress.md  update_task.md
tool_scripts/clickup_api/: __init__.py  attachments.py  client.py  custom_fields.py  lists_spaces.py  tags.py  tasks.py
tool_scripts/help_scan/: list_commands.py
tool_scripts/resolve/: fuzzy_target.py
tool_scripts/scaffold/: scaffold.py
tool_scripts/scaffold/specs/: oysterun.yaml
